read bugs